# farfan-eduardo-pdi-1c-2026

./: .gitignore  LAB_MANIFEST.md  README.md  main.py  pyproject.toml
001/003 - LAB/: muestreo_cuantificacion.py
002/003 - LAB/: 2026_PDI_Farfan_Eduardo_canal_mouse.py  2026_PDI_farfan_eduardo.py  use_py5.py
003/002 - PRA/: 003 - operaciones basicas con opencv.ipynb
004/003 - LAB/: 005 - practica guiada de procesamiento de imagenes.ipynb  007 - recuperacion y preprocesamiento de imagenes propias.ipynb
005/002 - PRA/: 006c - morfologia matematica para limpieza de mascaras.ipynb  008 - propiedades geometricas de contornos.ipynb
005/003 - LAB/: 007 - deteccion de contornos.ipynb
clases/unidad_01/: u1_resumen_tecnico.md
clases/unidad_02/material_profe_002-py5/: 2026_PDI_Farfan_Eduardo_lupa.py
